# adsmt-private

./: .claude-latest-session-id  .gitignore  Cargo.toml  justfile
.claude-memories/: MEMORY.md  logicutils_version_rule.md  oxiz_relationship.md  project_layout.md
adsmt-abduce/: Cargo.toml
adsmt-abduce/src/: lib.rs
adsmt-cert/: Cargo.toml
adsmt-cert/src/: canonical.rs  emit.rs  lib.rs  recorder.rs  witness.rs
adsmt-class/: Cargo.toml
adsmt-class/src/: lib.rs
adsmt-cli/: Cargo.toml
adsmt-cli/src/: main.rs
adsmt-core/: Cargo.toml
adsmt-core/src/: error.rs  kind.rs  lib.rs  rule.rs  term.rs  theorem.rs  ty.rs
adsmt-engine/: Cargo.toml
adsmt-engine/src/: bool_solver.rs  cnf.rs  lib.rs  oxiz_backend.rs  proof_bridge.rs  quant.rs  solver.rs
adsmt-ffi/: Cargo.toml
adsmt-ffi/src/: lib.rs
adsmt-parser/: Cargo.toml
adsmt-parser/src/: convert.rs  lib.rs  smtlib.rs
adsmt-quant/: Cargo.toml
adsmt-quant/src/: lib.rs
adsmt-theory/: Cargo.toml
adsmt-theory/src/: arith.rs  arrays.rs  bv.rs  datatypes.rs  lib.rs  polite.rs  trait_.rs  uf.rs
lean/: Adsmt.lean  lakefile.toml
lean/Adsmt/: Tactic.lean  Translate.lean
