[package]
name = "adsmt-theory"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Theory trait, polite combination framework, and theory implementations (UF/LIA/LRA/Arrays/Datatypes)"

[dependencies]
adsmt-core.workspace = true
adsmt-cert.workspace = true
thiserror.workspace = true
indexmap.workspace = true
smallvec.workspace = true
